# starknet_stack

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: build.yaml  deploy_watcher_prover.yaml
infrastructure/: .gitignore  Makefile  README.md
infrastructure/ansible/: generate-inventory.py  generate.py  inventory.yaml
infrastructure/ansible/playbooks/: sequencer_node.yaml
infrastructure/ansible/playbooks/templates/: sequencer.service.j2
infrastructure/ansible/sequencer/: generate-inventory.py
infrastructure/ansible/sequencer/playbooks/: from_ami_sequencer_node.yaml  sequencer_node.yaml
infrastructure/ansible/watcher_prover/: inventory.yaml
infrastructure/ansible/watcher_prover/playbooks/: deployment.yaml  server_setup.yaml
infrastructure/terraform/example_sequencer_nodes/: main.tf  providers.tf
infrastructure/terraform/modules/aws_ec2_cluster/: ec2.tf  iam.tf  security_group.tf  variables.tf  vpc.tf
infrastructure/terraform/watcher_prover/: main.tf  providers.tf
proofs/: 0x102c223b57d5886-public_inputs  0x105b1f3b319f51b4-public_inputs  0x105b86abf6a61e91-public_inputs  0x107eae40864a17a2-public_inputs  0x108ddc027525945e-public_inputs  0x10dde1381575318e-public_inputs  0x1115f608d246be78-public_inputs  0x1188074e0c8cf32d-public_inputs  0x12644dd4cdc094df-public_inputs  0x13bf8905e722176c-public_inputs  0x140101cbd0ef2176-public_inputs  0x141f527bfaf952ea-public_inputs  0x1477e6475b36b76a-public_inputs  0x14d9f1a8530fea70-public_inputs  0x15b02c90b951764d-public_inputs  0x15ebae79ab526217-public_inputs  0x1654aaf9faa7cfd-public_inputs  0x16b2ba6ffff98331-public_inputs  0x1705922759593a70-public_inputs  0x173c0bcbdcb73566-public_inputs  0x1774a97efa6220ed-public_inputs  0x1858848fa3c534cc-public_inputs  0x193b0100de68222d-public_inputs  0x1a57f7173cdc9f92-public_inputs  0x1a6a4d0df1c1c9ad-public_inputs  0x1aba324daf70e4c9-public_inputs  0x1afd7b8b735dba16-public_inputs  0x1b65b532d2712068-public_inputs  0x1bf1e6593956b150-public_inputs  0x1c4f0006bb566b6b-public_inputs  0x1d489dc2d8adfb65-public_inputs  0x1db03e0baa351283-public_inputs  0x1e050c099543f107-public_inputs  0x1ea6b9bb8da757e6-public_inputs  0x1eb7bcb1352007e0-public_inputs  0x1fa36fc7f579827c-public_inputs  0x1fd11c368d9cb2c9-public_inputs  0x2004d7f9fb5fe784-public_inputs  0x20860ab2373b58bb-public_inputs  0x226ad6346949c242-public_inputs  (+580 more)
sequencer/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  install.sh  rust-toolchain.toml
sequencer/benchmark/: .gitignore  TEST  TEST-2  fabfile.py  requirements.txt
sequencer/benchmark/benchmark/: commands.py  config.py
sequencer/cairo_programs/: erc20.casm  fact_contract.cairo  fact_contract.casm  fib.cairo  fib_contract.cairo  fib_contract.casm
sequencer/cairo_programs/cairo2/: erc20.cairo  erc20.sierra  factorial.sierra  fibonacci.sierra
sequencer/config/: parameters.json
sequencer/config/scripts/: config.py  generate_committee.py  generate_committee.sh
sequencer/consensus/: Cargo.toml
sequencer/consensus/src/: aggregator.rs  core.rs  messages.rs  proposer.rs
sequencer/consensus/src/tests/: aggregator_tests.rs  core_tests.rs  messages_tests.rs  synchronizer_tests.rs
sequencer/crypto/src/: lib.rs
sequencer/execution_engine/: Cargo.toml
sequencer/execution_engine/src/: cairo_native_engine.rs  cairovm_engine.rs  lib.rs  starknet_in_rust_engine.rs
sequencer/execution_engine/src/cairo_native_engine/: syscall_handler.rs
sequencer/mempool/src/: batch_maker.rs  lib.rs  quorum_waiter.rs
sequencer/mempool/src/tests/: mempool_tests.rs  quorum_waiter_tests.rs
sequencer/network/: Cargo.toml
sequencer/node/: Cargo.toml
sequencer/node/src/: client.rs  config.rs  hotstuff_node.rs  main.rs  node.rs
sequencer/rpc_endpoint/: Cargo.toml
sequencer/rpc_endpoint/src/: lib.rs  main.rs  starknet_backend.rs
sequencer/rpc_endpoint/src/rpc/: mod.rs
sequencer/rpc_endpoint/src/rpc/types/: codegen.rs  mod.rs  serializable_types.rs
sequencer/sequencer/: Cargo.toml
sequencer/sequencer/src/: main.rs  starknet_backend.rs
sequencer/sequencer/src/rpc/types/: codegen.rs  mod.rs
sequencer/sequencer/src/store/: in_memory.rs  mod.rs  rocksdb.rs  sled.rs  store.rs  store_engine.rs
sequencer/store/src/tests/: store_tests.rs
sequencer/types/: Cargo.toml
sequencer/types/src/: codegen.rs  lib.rs  serializable_types.rs
watcher_dispatcher/: .gitignore  Makefile  README.md  mix.exs
watcher_dispatcher/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
watcher_dispatcher/lib/: rpc.ex  s3.ex  watcher_dispatcher.ex  watcher_dispatcher_nif.ex  watcher_dispatcher_poller.ex  watcher_dispatcher_web.ex
watcher_dispatcher/lib/watcher_dispatcher/: application.ex  mailer.ex  repo.ex
watcher_dispatcher/lib/watcher_dispatcher_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
watcher_dispatcher/lib/watcher_dispatcher_web/components/: core_components.ex  layouts.ex
watcher_dispatcher/native/watcher_dispatcher/: Cargo.toml  README.md
watcher_dispatcher/native/watcher_dispatcher/src/: cairo.rs  lib.rs
watcher_dispatcher/priv/repo/: seeds.exs
watcher_dispatcher/test/: test_helper.exs  test_nif.exs
watcher_dispatcher/test/support/: conn_case.ex  data_case.ex
watcher_dispatcher/test/tests/: nif_test.exs
watcher_prover/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  mix.exs
watcher_prover/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
watcher_prover/lib/: rpc.ex  s3.ex  watcher_prover.ex  watcher_prover_nif.ex  watcher_prover_poller.ex  watcher_prover_web.ex
watcher_prover/lib/watcher_prover/: application.ex  mailer.ex  repo.ex
watcher_prover/lib/watcher_prover_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
watcher_prover/native/watcher_prover/: Cargo.toml  README.md
watcher_prover/native/watcher_prover/src/: cairo.rs  lib.rs
watcher_prover/priv/repo/: seeds.exs
watcher_prover/test/: test_helper.exs
watcher_prover/test/support/: conn_case.ex  data_case.ex
watcher_prover/test/tests/: nif_test.exs
(+18 files in other folders)
