[package]
name = "execution_engine"
authors = ["LambdaClass <hello@lambdaclass.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-felt = "0.6.1"
cairo-vm = { version = "0.8.1", features = ["cairo-1-hints"]}
cairo-lang-starknet = { version = "=2.1.0", default-features = false }
serde_json = "1.0.61"
cairo-native = { git = "https://github.com/lambdaclass/cairo_native", rev="22c35a97634071e2f90af3c414b7c06bd66daa86"}
cairo-lang-sierra = "=2.1.0"
num-bigint = "0.4.3"
cairo-lang-compiler = "=2.1.0"
melior = "0.9.6"
