[package]
name = "execution_engine"
authors = ["LambdaClass <hello@lambdaclass.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-felt = "0.8.6"
cairo-vm = { version = "0.8.1", features = ["cairo-1-hints"]}
cairo-lang-starknet = { version = "2.2.0", default-features = false }
serde_json = "1.0.61"
cairo-lang-sierra = "2.2.0"
num-bigint = "0.4.3"
cairo-lang-compiler = "2.2.0"
melior = "0.9.6"
starknet_in_rust = { version = "0.3.1" }