[package]
name = "rpc_endpoint"
authors = ["LambdaClass <hello@lambdaclass.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
log = "0.4.0"
jsonrpsee = { version="0.18.2", default-features = true, features = ["server", "macros"] }
futures = "0.3.8"
mempool = { path = "../mempool" }
sequencer = { path = "../sequencer" }
types = { path = "../types" }
serde_json = { version = "1.0.96", default-features = false }
serde = "1.0.164"
cairo-felt = "0.8.6"
serde_with = "3.0.0"
thiserror = "1.0.46"
base64 = "0.21.2"
tokio = "1.28.2"
tokio-util = { version = "0.7.3", features = ["codec"] }
anyhow = "1.0.71"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "std",
] }
bytes = "1.0.1"
starknet_in_rust = { git="https://github.com/lambdaclass/starknet_in_rust/", branch="add_cairo_native"}
