[package]
name = "sequencer"
authors = ["LambdaClass <hello@lambdaclass.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.19.0"
sled = "0.34.7"
jsonrpsee = { version="0.18.2", features = ["server", "macros"] }
serde_json = { version = "1.0.96", default-features = false }
serde = "1.0.164"
cairo-felt = "0.5.2"
serde_with = "3.0.0"
thiserror = "1.0.40"
base64 = "0.21.2"
tokio = "1.28.2"
anyhow = "1.0.71"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "std"]}
