[package]
name = "types"
authors = ["LambdaClass <hello@lambdaclass.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.96", default-features = false }
serde = "1.0.164"
cairo-felt = "0.8.6"
serde_with = "3.0.0"
thiserror = "1.0.46"
base64 = "0.21.2"
rand = "0.7.3"
